--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\DEVJYOT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-8.0.15.jar=G:\\JAVA Jar Files\\mysql-connector-java-8.0.15.jar
+user.properties.file=C:\\Users\\devjy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
