--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\DEVJYOT\\Downloads\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15.jar
-file.reference.mysql-connector-java-8.0.15.jar-1=F:\\JAVA Jar Files\\mysql-connector-java-8.0.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar-1}
+    ${file.reference.mysql-connector-java-8.0.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
