--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/_IP_PROJECT_CLASS_XII_FINAL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\DEVJYOT\\Downloads\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar=src\\jar\\mysql-connector-java-8.0.15.jar
 includes=**
 jar.compress=false
 javac.classpath=\
